# gb10-services

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile  lefthook.yml
crates/gb10-memory-guardian/: Cargo.toml
crates/gb10-memory-guardian/src/: escalation.rs  lib.rs  main.rs  thresholds.rs
crates/gb10-memory-guardian/tests/: no_alloc_emergency.rs  target_config.rs  thresholds.rs
docs/: gb10-vllm-memory-footprint.md
llm-guard-proxy/: AGENTS.md
scripts/: aeon_chat_ready.py  aeon_hang_guard.py  aeon_healthcheck.sh  aeon_text_stop_start.sh  aeon_vllm_wrapper.py  collect_reranker_cloud_baseline.py  embedding_endpoint_equivalence.py  gb10-swap-guard.sh  gb10_activate_embedding_profile.sh  gb10_apply_aeon_querit_profile.sh  gb10_check_mem_available.sh  gb10_deploy_memory_guardian.sh  gb10_embedding_activation.py  gb10_embedding_activation_checks.py  gb10_embedding_activation_config.py  gb10_embedding_activation_storage.py  gb10_embedding_profile_contract.py  gb10_embedding_verifier_runtime.py  gb10_enforce_docker_cgroup_limits.sh  gb10_lifecycle.sh  gb10_memory_guardian_canary.sh  gb10_querit_canary_deploy.py  gb10_querit_canary_lifecycle.py  gb10_querit_canary_preflight.py  gb10_querit_canary_ready.py  gb10_restart_text_safe.sh  gb10_service_ready.sh  gb10_stack_recovery.sh  gb10_verify_embedding_profile.py  gb10_verify_vllm_no_swap.sh  gb10_verify_vllm_no_swap_core.py  llm_guard_proxy_cached_rebuild.sh  llm_guard_proxy_publish_cgroup_registration.sh  prepare_reranker_equivalence_corpus.py  querit_canary_deployment.py  querit_canary_lifecycle.py  (+27 more)
(+102 files in other folders)
