[package]
name = "gb10-memory-guardian"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
gb10-memory-guardian-core = { path = "../gb10-memory-guardian-core" }
libc.workspace = true
notify.workspace = true
serde.workspace = true
toml.workspace = true
